[workspace]
resolver = "2"
members = ["nova_cli", "nova_vm", "small_string", "tests"]
exclude = ["nova_lint"]

[workspace.package]
edition = "2024"
version = "0.3.1"
license = "MPL-2.0"
homepage = "https://trynova.dev/"
repository = "https://github.com/trynova/nova/"
readme = "README.md"
keywords = ["javascript", "typescript", "interpreter"]
categories = ["development-tools"]
authors = ["The Nova Team"]

[workspace.dependencies]
ahash = "0.8.12"
clap = { version = "4.5.47", features = ["derive"] }
cliclack = "0.3.6"
console = "0.15.11"
ctrlc = "3.4.5"
fast-float = "0.2.0"
fast_float = "0.2.0"
hashbrown = "0.16.0"
lexical = { version = "7.0.4", default-features = false, features = [
    "std",
    "write-integers",
    "write-floats",
    "radix",
] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
oxc-miette = { version = "2.5.0", features = ["fancy"] }
oxc_allocator = "0.90.0"
oxc_ast = "0.90.0"
oxc_diagnostics = "0.90.0"
oxc_ecmascript = "0.90.0"
oxc_parser = "0.90.0"
oxc_regular_expression = "0.90.0"
oxc_semantic = "0.90.0"
oxc_span = "0.90.0"
oxc_syntax = "0.90.0"
rand = "0.9.2"
regex = "1.11.2"
ryu-js = "1.0.2"
sonic-rs = "0.3.17"
soavec = "0.1.1"
soavec_derive = "0.1.1"
unicode-normalization = "0.1.24"
usdt = { git = "https://github.com/aapoalas/usdt.git", branch = "nova-aarch64-branch" }
wtf8 = "0.1"

[workspace.metadata.dylint]
libraries = [{ path = "nova_lint" }]

[profile.release]
lto = true

# This profile has all the same safety checks as dev builds. It trades slightly
# longer compile times for faster runs, which is worth it when running test262.
[profile.dev-fast]
inherits = "dev"
opt-level = 2
lto = "thin"
debug = "limited"
