[package]
name = "nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
nova_parser = { path = "../nova_parser" }
nova_checker = { path = "../nova_checker" }
codespan-reporting = "0.11"
