[package]
name = "nova_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
oxc_parser = "0.6.0"
oxc_ast = "0.6.0"
oxc_span = "0.6.0"
nova_vm = { path = "../nova_vm" }
