[package]
name = "nova_cli"
version = "0.1.0"
edition = "2021"
default-run = "nova_cli"

[dependencies]
clap = { workspace = true}
cliclack = { workspace = true }
console = { workspace = true }
miette = { workspace = true }
nova_vm = { path = "../nova_vm" }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc_diagnostics = { workspace = true }
anymap = { workspace = true }