[package]
name = "nova_cli"
repository = "https://github.com/trynova/nova/tree/main/nova_cli"
description = "Nova Command Line Interface"
default-run = "nova_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true}
cliclack = { workspace = true }
ctrlc = { workspace = true }
console = { workspace = true }
nova_vm = { path = "../nova_vm" }
oxc_ast = { workspace = true }
oxc-miette = { workspace = true }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_diagnostics = { workspace = true }
