[package]
name = "nova_lint"
repository = "https://github.com/trynova/nova/tree/main/nova_lint"
description = "A collection of custom lints to ease the development and maintenance of the Nova project."
edition = "2024"
version = "0.1.0"
license = "MPL-2.0"
homepage = "https://trynova.dev"
authors = ["The Nova Team"]
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "agent_comes_first"
path = "ui/agent_comes_first.rs"

[[example]]
name = "gc_scope_comes_last"
path = "ui/gc_scope_comes_last.rs"

[[example]]
name = "gc_scope_is_only_passed_by_value"
path = "ui/gc_scope_is_only_passed_by_value.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "ff4a26d442bead94a4c96fb1de967374bc4fbd8e" }
dylint_linting = { version = "4.0.0", features = ["constituent"] }

[dev-dependencies]
dylint_testing = "4.0.0"
nova_vm = { path = "../nova_vm" }

[package.metadata.rust-analyzer]
rustc_private = true
