[package]
name = "nova_lint"
repository = "https://github.com/trynova/nova/tree/main/nova_lint"
description = "A collection of custom lints to ease the development and maintenance of the Nova project."
edition = "2024"
version = "0.1.0"
license = "MPL-2.0"
homepage = "https://trynova.dev"
authors = ["The Nova Team"]
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "agent_comes_first"
path = "ui/agent_comes_first.rs"

[[example]]
name = "gc_scope_comes_last"
path = "ui/gc_scope_comes_last.rs"

[[example]]
name = "gc_scope_is_only_passed_by_value"
path = "ui/gc_scope_is_only_passed_by_value.rs"

[[example]]
name = "no_it_performs_the_following"
path = "ui/no_it_performs_the_following.rs"

[[example]]
name = "no_multipage_spec"
path = "ui/no_multipage_spec.rs"

[[example]]
name = "spec_header_level"
path = "ui/spec_header_level.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "c936595d17413c1f08e162e117e504fb4ed126e4" }
dylint_linting = { version = "5.0.0", features = ["constituent"] }
regex = "1"

[dev-dependencies]
dylint_testing = "5.0.0"
nova_vm = { path = "../nova_vm" }

[package.metadata.rust-analyzer]
rustc_private = true
