[package]
name = "nova_vm"
repository = "https://github.com/trynova/nova/tree/main/nova_vm"
description = "Nova Virtual Machine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ahash = { workspace = true }
fast-float = { workspace = true }
hashbrown = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
oxc_ecmascript = { workspace = true }
rand = { workspace = true }
ryu-js = { workspace = true }
small_string = { path = "../small_string" }
sonic-rs = { workspace = true, optional = true }
unicode-normalization = { workspace = true }
wtf8 = { workspace = true }

[features]
default = [
    "math",
    "json",
    "date",
    "array-buffer",
    "shared-array-buffer",
    "weak-refs",
    "atomics",
    "regexp",
    "set"
]
array-buffer = []
atomics = ["array-buffer", "shared-array-buffer"]
date = []
interleaved-gc = []
json = ["sonic-rs"]
math = []
regexp = []
shared-array-buffer = []
weak-refs = []
set = []
typescript = []

[build-dependencies]
small_string = { path = "../small_string" }
