[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "test262"
path = "test262_runner.rs"

[dependencies]
clap = { workspace = true}
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yml = "0.0.10"
wait-timeout = "0.2.0"
yaml-rust2 = "0.8.0"
